# anteater

./: .gitignore  CMakeLists.txt  README.adoc
doc/: function_timer.h  logger.adoc  logger.hpp  matrices.ods
include/brainyguy/: bglogger.h
sample/: matrix_mult.c  threads.cpp
src/: bglogger.c
test/: bglogger_test.c
